# LicensePlateDetector

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md  main.cpp
